--- a/base/kustomize-deployment.yaml
+++ b/base/kustomize-deployment.yaml
@@ -28,7 +28,7 @@ metadata:
 spec:
   selector:
     app: KustomizeTestApp
-  type: LoadBalancer
+  type: ClusterIP
   ports:
     - protocol: TCP
       port: 80
