--- a/overlays/dev/ingress-fqdn.yaml
+++ b/overlays/dev/ingress-fqdn.yaml
@@ -1,10 +1,3 @@
----
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: kustomize-ingress
-  annotations:
-    kubernetes.io/ingress.class: nginx
-spec:
-  rules:
-  - host: kustomize.dev.ac
+- op: replace
+  path: /spec/rules/0/host
+  value: kustomize.dev.ac
